# comparison-of-cpp-julia-go-rust

cpp/image-convolution/: .gitignore  CMakeLists.txt  Image.h  Kernel.cpp  Kernel.h  Stopwatch.h  benchmark_utilities.h  convolution.cpp  convolution.h  main.cpp
cpp/mariani-silver/: CMakeLists.txt  Complex.cpp  Complex.h  Image.cpp  Image.h  ImageDimensions.cpp  ImageDimensions.h  ImageGenerationWorker.h  ImageGenerator.h  MandelbrotPixelCalculator.h  Rectangle.cpp  Rectangle.h  RectangleSplitter.h  Stopwatch.h  benchmark_utilities.cpp  benchmark_utilities.h  main.cpp
go/image-convolution/: .gitignore  benchmarkUtilities.go  convolution.go  image.go  kernel.go  main.go
go/mariani-silver/: .gitignore  benchmarkUtilities.go  image.go  imageDimensions.go  imageGenerator.go  main.go  mandelbrotPixelCalculator.go  rectangle.go  rectangleSplitter.go
julia/image-convolution/: .gitignore  BenchmarkUtilities.jl  Convolution.jl  ImageM.jl  KernelM.jl  main.jl  multithread.ps1
rust/image-convolution/: .gitignore  Cargo.toml
rust/image-convolution/src/: benchmark_utilities.rs  convolution.rs  image.rs  kernel.rs  main.rs
rust/mariani-silver/: Cargo.toml
rust/mariani-silver/src/: complex.rs  image.rs  image_dimensions.rs  image_generator.rs  main.rs  mandelbrot_pixel_calculation.rs  rectangle.rs  rectangle_splitter.rs  wait_group.rs
